# libcolumnfile

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac  libcolumnfile.pc.in
debian/: changelog  control  copyright  rules
src/: columnfile-capnp.cc  columnfile-capnp.h  columnfile-internal.h  columnfile-reader.cc  columnfile-select.cc  columnfile-writer.cc  columnfile.h  columnfile_test.cc  semaphore.h  zlib-parallel.cc
testdata/: 000002.col  000004.col  000008.col  000010.col  000021.col  000023.col  000025.col  000026.col  000027.col  000028.col  000029.col  000044.col  000046.col  000149.col  000155.col  000156.col  000157.col  000161.col  000414.col  000416.col  000422.col  000449.col  000476.col  000707.col  001101.col  001112.col  001132.col  001155.col  001192.col  001196.col  001236.col  001529.col  001934.col  004293.col  005710.col  006019.col  006222.col  006966.col  007437.col  008330.col  (+2 more)
tools/: columnfile-cat.cc  columnfile-sort.cc
